fixed broken hamburger menu nav (menu-toggle button was not visible) - fixes #107

--- a/css/groundwork.css
+++ b/css/groundwork.css
@@ -5374,7 +5374,7 @@ nav.inline ul li ul li:last-child a, .inline.nav ul li ul li:last-child a, nav.i
   border-radius: 0 0 4px 4px;
 }
 nav.menu .menu-toggle, .menu.nav .menu-toggle {
-  display: none !important;
+  display: none;
 }
 
 .pagination ul {
