--- a/src/scss/form/_forms.scss
+++ b/src/scss/form/_forms.scss
@@ -40,18 +40,6 @@
   }
 }
 
-// %error-field, %invalid-field {
-//   color:$error-color;
-//   background:lighten($error-color, 62%);
-//   border-color:$error-color;
-// }
-
-// %success-field, %valid-field {
-//   color:$success-color;
-//   background:lighten($success-color, 62%);
-//   border-color:$success-color;
-// }
-
 %input {
   @extend %field;
   &[size] {
@@ -249,12 +237,6 @@
   }
   .radio-list {
     @extend %radio-list;
-  }
-  .error, .invalid {
-    @extend %error-field;
-  }
-  .success, .valid {
-    @extend %success-field;
   }
   .prefix {
     @extend %prefix;
