--- a/src/scss/nav/_navigation.scss
+++ b/src/scss/nav/_navigation.scss
@@ -266,7 +266,7 @@
   &.menu {
     .menu-toggle {
       @extend %button;
-      display:none !important;
+      display:none;
     }
   }
 }
